--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "npm run build && node dist/index.js"
   },
   "keywords": [
     "mcp",
@@ -28,7 +28,6 @@
     "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
     "prisma": "^6.15.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
 }
