--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\" && prisma generate",
-    "start": "node dist/index.js"
+    "postinstall": "prisma generate",
+    "prepare": "npm run build"
   },
   "keywords": [
     "mcp",
