--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
   "main": "dist/index.js",
   "bin": {
-    "mcp-server": "./dist/index.js"
+    "expense-log-mcp": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\" && prisma generate",
