--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,8 @@
-
 {
+  "extends": "@tsconfig/node24/tsconfig.json",
   "compilerOptions": {
-    "target": "es2021",
-    "module": "es2022",
-    "lib": ["es2021"],
     "declaration": true,
-    "sourceMap": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": false,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "outDir": "./dist"
+  },
+  "include": ["src/**/*.ts"]
 }
