Add delete expense functionality and prevent duplicates
This commit introduces several new features and improvements:

- A new deleteExpense tool has been added to allow for the removal of expenses.
- The Expense model now includes a messageId and a unique constraint on ledgerId and messageId to prevent the creation of duplicate expenses.
- A db:seed script and prisma/seed.ts file have been added to seed the database with initial data.
- The Prisma schema has been updated to use cuid() for IDs and to include createdAt and updatedAt timestamps in all models.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
     "postinstall": "npx prisma generate",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "db:seed": "npx prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [
     "mcp",
@@ -37,6 +41,7 @@
     "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
     "prisma": "^6.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
 }
