--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
     "url": "https://github.com/evanxd/expense-log-mcp.git"
   },
   "main": "dist/index.js",
-  "bin": {
-    "expense-log-mcp": "./dist/index.js"
-  },
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
-    "postinstall": "npx prisma generate",
-    "prepare": "npm run build",
-    "db:seed": "npx prisma db seed"
+    "build": "tsc",
+    "db:seed": "npx prisma db seed",
+    "start": "node dist/index.js"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
